# llm-auditions

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: defaults.yaml  models.yaml
docs/: PILOT_RUN_0_STATUS.md
fixtures/: baseline_tasks.yaml
results/: GIT_METADATA_SUMMARY.json  package_manifest.json  sanitization_findings.json
schemas/: evidence_synthesis.schema.json  math_birthday_probability.schema.json  math_eigenvalues.schema.json  math_modular_arithmetic.schema.json  math_pell_solution.schema.json  math_sum_of_divisors.schema.json  math_trailing_zeros.schema.json  research_plan.schema.json  reviewer_result.schema.json  run_manifest.schema.json  worker_result.schema.json
tests/: test_audit_config.py  test_audit_config_exact.py  test_audit_run.py  test_audit_run_exact.py  test_comparison_legacy_rubrics.py  test_comparison_rubric_coverage.py  test_comparison_scenario_content.py  test_comparison_scenario_hashing.py  test_comparison_scenarios.py  test_comparison_shared_rubrics.py  test_configuration.py  test_contradiction_verifier.py  test_development_behavior.py  test_development_reporting.py  test_development_sandbox.py  test_escalation_analysis.py  test_escalation_matrix.py  test_evidence_integration.py  test_evidence_relevance.py  test_execution_source_hash_coverage.py  test_handoff_execution.py  test_handoff_execution_matrix.py  test_handoff_mode_isolation.py  test_handoff_output_mode_isolation.py  test_handoff_reporting_dependencies.py  test_handoff_resume.py  test_handoff_scenario_isolation.py  test_hard_gates.py  test_manifest.py  (+33 more)
(+80 files in other folders)
