[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-auditions"
version = "1.0.0"
description = "Production-quality local LLM audition framework for Ollama-served models"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "sympy>=1.12",
    "PyYAML>=6.0",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
audition = "llm_auditions.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
